<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/black">

<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_a"
            android:textColor="@android:color/darker_gray"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:layout_marginTop="8sp"
            android:textColor="@android:color/white"
            android:textSize="56sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_3_points"
            android:onClick="addThreeTeamA"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_2_points"
            android:onClick="addTwoTeamA"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/free_throw"
            android:onClick="addOneTeamA"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="32dp"
            android:onClick="decrementTeamA"
            android:text="@string/decrement"/>

    </LinearLayout>

    <View
        android:layout_height="match_parent"
        android:layout_width="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_b"
            android:textColor="@android:color/darker_gray"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:layout_marginTop="8sp"
            android:textColor="@android:color/white"
            android:textSize="56sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_3_points"
            android:onClick="addThreeTeamB"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_2_points"
            android:onClick="addTwoTeamB"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/free_throw"
            android:onClick="addOneTeamB"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="32dp"
            android:onClick="decrementTeamB"
            android:text="@string/decrement"/>
    </LinearLayout>

</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:onClick="resetTeam"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>